<resources>
    <string name="app_name">TuriApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ciudad_nacimiento">Ciudad de Nacimiento</string>
    <string name="estatura">Estatura</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género</string>
    <string name="info">"Nombre: %s,\n estatura: %f,\n género: %s,\n poderes: %s, \ciudad: %s"</string>
    <string-array name="lista_ciudades">
        <item>Ciudad Central</item>
        <item>Ciudad Gótica</item>
        <item>Temiscira</item>
        <item>Metrópolis</item>
    </string-array>
    <string name="masculino">Masculino</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_superman">Clark Kent</string>
    <string name="poderes">Poderes:</string>
    <string name="poderes_superman">Super fuerza, vuelo, invulnerabilidad, super velocidad, visión con calor, congelar, visión rayos x"</string>
    <string name="registrar">Registrar</string>
    <string name="registro">Registro de un Superhoreo</string>
    <string name="super_fuerza">Super Fuerza</string>
    <string name="superman">Superman</string>
    <string name="telequinesis">Telequinesis</string>
    <string name="velocidad">Super velocidad</string>
    <string name="alias">Alias</string>
    <string name="city">Ciudad</string>
    <string name="metropolis">Metropolis</string>
    <string name="occupation">Ocupación</string>
    <string name="reporter">Reportero</string>
    <string name="height">Altura</string>
    <string name="height_example">1.85</string>


    <!-- Sync Preferences -->
    <string name="notifications">Notificaciones</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_detail">Detalle</string>
    <string name="title_preference">Preferencias</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preferences">Preferencias</string>
</resources>