<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detalle.DetalleActivity">

        <TextView
            android:id="@+id/name_text_view"
            style="@style/Texto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/alias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/picture_image_view"
            android:layout_width="376dp"
            android:layout_height="150dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view"
            app:srcCompat="@drawable/gotoflylogito"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_alias_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Ubicación:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/alias_text_view"
            style="@style/Texto_normal"
            android:layout_width="248dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/nombre_superman"
            app:layout_constraintStart_toEndOf="@+id/label_alias_text_view"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/label_city_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Descripción:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_alias_text_view" />

        <TextView
            android:id="@+id/city_text_view"
            style="@style/Texto_normal"
            android:layout_width="360dp"
            android:layout_height="142dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/metropolis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_city_text_view" />

        <TextView
            android:id="@+id/label_height_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:text="Temperatura:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/city_text_view" />

        <TextView
            android:id="@+id/height_text_view"
            style="@style/Texto_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="160dp"
            android:text="@string/height_example"
            app:layout_constraintStart_toEndOf="@+id/label_height_text_view"
            app:layout_constraintTop_toTopOf="@+id/city_text_view" />

        <TextView
            android:id="@+id/label_powers_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="106dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="Recomendado:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_height_text_view" />

        <TextView
            android:id="@+id/powers_text_view"
            style="@style/Texto_normal"
            android:layout_width="363dp"
            android:layout_height="144dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/poderes_superman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_powers_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>